# co-shien

./: .gitignore  ADMIN_SETUP_GUIDE.md  CAREER_PLATFORM_DESIGN.md  DEMO_BUG_LIST.md  EMAIL_AUTH_IMPLEMENTATION.md  EMAIL_VERIFICATION_SETUP.md  FACILITY_SETUP_EXPECTATIONS.md  README.md  RESEND_SETUP_GUIDE.md  REVIEW_PLAN.md  STAGING_ENV.md  SUPABASE_EMAIL_AUTH_SETUP.md  SUPABASE_MIGRATION.md  SYSTEM_DESIGN.md  SYSTEM_SPEC.md  TESTING_GUIDE.md  USAGE_EXAMPLES.md  USERS_VS_STAFF_TABLE.md  USER_ACCOUNT_LED_MODEL.md  add_admin_system_migration.sql  add_facility_pre_registration_migration.sql  add_facility_verification_migration.sql  add_holiday_periods_migration.sql  add_include_holidays_migration.sql  add_invitation_start_date_migration.sql  add_login_id_migration.sql  add_management_targets_migration.sql  add_missing_user_columns.sql  add_shift_pattern_migration.sql  add_staff_career_tables.sql  add_staff_password_migration.sql  check-all-data.ts  check-dev-data.ts  check-leads-table.ts  check_and_fix_holiday_settings.sql  check_facility_relations.sql  check_holiday_data.sql  check_test_data.sql  check_user.sql  cleanup_duplicate_facilities.sql  (+39 more)
roots/: README.md  pyproject.toml  report.md
roots/knowledge/: coding_standards.md  compliance_requirements.md  current_issues.md  phase_roadmap.md  project_overview.md  regulatory_manual.md  review_plan.md  tech_stack.md
roots/src/roots/: crew.py  main.py
roots/src/roots/config/: agents.yaml  tasks.yaml
roots/src/roots/tools/: __init__.py  directory_explorer.py  file_reader.py  file_writer.py  grep_search.py  shell_runner.py  (+1 more)
(+739 files in other folders)
