[project]
name = "roots"
version = "0.1.0"
description = "roots using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.9.3",
]

[project.scripts]
roots = "roots.main:run"
run_crew = "roots.main:run"
train = "roots.main:train"
replay = "roots.main:replay"
test = "roots.main:test"
run_with_trigger = "roots.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
